res/examples/invalid/fn_expr_returning_range.eg
(a: number, b: number): range => 1..10;

// out: SyntaxError: unexpected "1"; expected: ["\"{\"", "\"(\""]